Fix search button spacing on lo-res Temporarily disable max-width on search form on < 46em width

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -74,6 +74,7 @@
   > button {
     color: #fff;
     display: inline-block;
+    float: left;
     height: 44px;
     padding: 0.5rem;
     width: 44px;
