--- a/src/scss/_search-page.scss
+++ b/src/scss/_search-page.scss
@@ -5,7 +5,7 @@
 }
 
 .search-form {
-  max-width: calc(320px - 2rem);
+  /*max-width: calc(320px - 2rem);*/
 }
 
 .logo-long {
